scrollbar fix

--- a/src/style.css
+++ b/src/style.css
@@ -97,7 +97,7 @@ h1 {
   #selectable li { margin: 3px; padding: 0.4em; font-size:11px; height: 18px; }
 
 
-::-webkit-scrollbar -moz-appearance {
+::-webkit-scrollbar {
 	width: 8px;
 }
 ::-webkit-scrollbar-button {
@@ -106,14 +106,14 @@ h1 {
 }
 ::-webkit-scrollbar-track {
 	background: #FFF;
-	/* border: thin solid lightgray; */
-	/* box-shadow: 0px 0px 3px #dfdfdf inset; */
-	/* border-radius:10px; */
+	 border: thin solid lightgray; 
+	 box-shadow: 0px 0px 3px #dfdfdf inset; 
+	 border-radius:10px; 
 }
 ::-webkit-scrollbar-thumb {
 	background: #C5C5C5;
-	/* border: thin solid gray; */
-	/* border-radius:10px; */
+	 border: thin solid gray; 
+	 border-radius:10px; 
 }
 ::-webkit-scrollbar-thumb:hover {
 	background:#7d7d7d;
